# api/swagger.yaml
@@ -108,20 +108,6 @@ paths:
           type: string
           description: Description of the issue
         - in: formData
-          name: Status
-          type: string
-          description: Status of the issue
-          required: true
-          enum:
-            - new
-            - open
-            - on hold
-            - resolved
-            - duplicate
-            - invalid
-            - won't fix
-            - closed
-        - in: formData
           name: Priority
           type: string
           description: Priority of the issue
@@ -143,7 +129,7 @@ paths:
             - proposal
             - task
         - in: formData
-          name: assignee_id
+          name: Asigned
           type: integer
           description: Assignee of the issue
       responses:
@@ -667,57 +653,18 @@ definitions:
       Votes:
         type: integer
         example: 1
-      Watchers:
+      Watch:
         type: integer
         example: 1
-      is_voted_by_current_user:
-        type: boolean
-        example: true
-      is_watched_by_current_user:
-        type: boolean
-        example: false
       created_at:
         type: string
         format: date
-        example: '2017-05-07T18:28:01.933Z'
+        example: '2019-05-07T18:28:01.933Z'
       updated_at:
         type: string
         format: date
-        example: '2017-05-07T18:28:02.933Z'
-      attachment_file_name:
-        type: string
-        example: attachment.png
-      attachment_content_type:
-        type: string
-        example: image/png
-      attachment_file_size:
-        type: integer
-        example: 100
-      attachment_updated_at:
-        type: string
-        format: date
-        example: '2017-05-07T18:28:02.933Z'
-      _links:
-        type: object
-        properties:
-          self:
-            type: object
-            properties:
-              href:
-                type: string
-                example: /issues/1
-          creator:
-            type: object
-            properties:
-              href:
-                type: string
-                example: /users/1
-          assignee:
-            type: object
-            properties:
-              href:
-                type: string
-                example: /users/1
+        example: '2019-05-07T18:28:02.933Z'
+        
   IssueIndex:
     type: object
     properties:
